--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,25 @@
-@import 'local-fonts';
+@import "local-fonts";
+
+@font-face {
+   font-family: "Montserrat-Light";
+
+   src: url("../fonts/Montserrat-Light.woff") format("woff"),
+      /* Modern Browsers */ url("../fonts/Montserrat-Light.woff2") format("woff2"); /* Modern Browsers */
+   font-weight: 300;
+}
+
+@font-face {
+   font-family: "Montserrat-Regular";
+
+   src: url("../fonts/Montserrat-Regular.woff") format("woff"),
+      /* Modern Browsers */ url("../fonts/Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
+   font-weight: 400;
+}
+
+@font-face {
+   font-family: "Montserrat-Black";
+
+   src: url("../fonts/Montserrat-Black.woff") format("woff"),
+      /* Modern Browsers */ url("../fonts/Montserrat-Black.woff2") format("woff2"); /* Modern Browsers */
+   font-weight: 900;
+}
