--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,14 +8,15 @@
    &__top {
       min-height: 110px;
       background-color: #1c3051;
-      border-bottom: 7px solid #ff7101;
+      border-bottom: 7px solid $orange;
+      z-index: 2;
    }
 
    &__inner {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 22px 0px 27px;      
+      padding: 22px 0px 27px;
       height: 100%;
    }
    &__logo {
@@ -36,7 +37,7 @@
    }
    &__link {
       li {
-         display: inline-block;        
+         display: inline-block;
          a {
             color: #fff;
             font-size: 13.55px;
@@ -51,7 +52,7 @@
       font-family: "Montserrat-Black";
       font-size: 21.94px;
       color: #fff;
-      text-transform: uppercase;      
+      text-transform: uppercase;
       align-items: center;
       position: relative;
       &::before {
@@ -70,13 +71,58 @@
       }
    }
 }
+.header-content {
+   min-height: 610px;
+   &__inner {
+      max-width: 651px;
+      padding-top: 93px;
+      position: relative;
+   }
+   &__title {
+      font-size: 93px;
+      @include f900;
+      color: #fff;
+      margin-bottom: 42px;
+      text-transform: uppercase;
+   }
+   &__subtitle {
+      font-size: 32.67px;
+      color: #1c3051;
+      font-family: "ProximaNova-Black", sans-serif;
+      text-transform: uppercase;
+      margin-bottom: 60px;
+   }
+   &__btn {
+      border-radius: 33px;
+      color: #fff;
+      font-size: 19.73px;
+      background-color: $orange;
+      padding: 18px;
+      @include f900;
+      width: 266px;
+      height: 66px;
+      cursor: pointer;
+      padding-left: 60px;
+      &::before {
+         content: "";
+         background: url(../images/icons/icon-watch.png);
+         color: #fff;
+         width: 34px;
+         height: 34px;
+         border-radius: 50%;
+         right: 0;
+      }
+   }
+   &__img {
+      position: absolute;
+      top: 0;
+      margin-right: auto;
+      width: 622px;
+      left: 730px;
+      top: -12px;
+      z-index: 1;
+   }
+}
 
-//-----------------------------------------------------------------------------------------------------------
-
-//-----------------------------------------------------------------------------------------------------------
-//
-//                                                    END CODE
-//
-//-----------------------------------------------------------------------------------------------------------
 
 @import "media";
