--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -13,6 +13,7 @@ body {
   height: 100%;
   position: relative;
   margin: 0;
+  font-family: "ProximaNova-Regular", sans-serif;
 }
 .container{
   max-width: 1200px;
