--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -37,3 +37,10 @@
     url("../fonts/11094.woff2") format("woff2"); /* Modern Browsers */
   font-weight: 900;
 }
+@font-face {
+  font-family: "ProximaNova-Bold";
+
+  src: url("../fonts/11096.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/11096.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: 800;  
+}
