--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,10 @@
       background-color: #1c3051;
       border-bottom: 7px solid $orange;
       z-index: 2;
+      position: fixed;
+      width: 100%;
+      top: 0px;
+      left: 0px;
    }
 
    &__inner {
@@ -85,10 +89,10 @@
    }
 }
 .header-content {
-   min-height: 610px;
+   min-height: 720px;
    &__inner {
       max-width: 660px;
-      padding-top: 93px;
+      padding-top: 195px;
       position: relative;
    }
    &__title {
@@ -106,19 +110,25 @@
       margin-bottom: 60px;
    }
    &__btn {
+      display: flex;
       border-radius: 33px;
       color: #fff;
       font-size: 20px;
       background-color: $orange;
-      padding: 6px;
+      padding: 16px;
       @include f900;
       width: 266px;
       height: 66px;
       cursor: pointer;
-      text-align: center;
+      align-items: center;    
       img{
          align-items: center;
-         margin-right: 15px;
+         margin-right: 15px;         
+         width: 35px;
+         height: 35px;
+      }
+       &:hover {
+         transform: scale(1.1);        
       }
    }
    &__img {
@@ -126,7 +136,7 @@
       margin-right: auto;
       width: 622px;
       left: 730px;
-      top: -12px;
+      top: 98px;
       z-index: 1;
    }
 }
@@ -195,4 +205,48 @@
       }
    }
 }
+//start services
+.services {
+   &__title {
+      margin: 110px 0 95px;
+   }
+   &__wrapper {
+      display: flex;
+      justify-content: space-between;
+      padding: 105px 45px 85px;
+      border: 1px solid $orange;
+      position: relative;
+   }
+   &__subtitle,
+   &__subsubtitle {
+      font-size: 31px;
+      color: $main;
+      padding: 0px 13px 0px 15px;
+      background-color: #fff;
+      text-transform: uppercase;
+      position: absolute;
+   }
+   &__subtitle {
+      left: 255px;
+      top: -20px;
+   }
+   &__subsubtitle {
+      right: 255px;
+      top: -20px;
+   }
+   &__item {
+      text-align: center;
+   }
+   &__img {
+      margin-bottom: 20px;
+   }
+   &__name {
+      font-size: 14px;
+      line-height: 28px;
+      color: $main;
+      text-transform: uppercase;
+   }
+}
+
+//end services
 @import "media";
