--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,12 +1,20 @@
 $orange: #ff7101;
 $main: #1c3051;
 
-@mixin f900 {
+@mixin m900 {
    font-family: 'Montserrat-Black', sans-serif;
    font-weight: 900;
 }
 
-@mixin f300 {
+@mixin m300 {
    font-family: 'Montserrat-Black', sans-serif;
    font-weight: 300;
+}
+@mixin p900 {
+   font-family: 'ProximaNova-Black', sans-serif;
+   font-weight: 900;
+}
+@mixin p800 {
+   font-family: 'ProximaNova-Bold', sans-serif;
+   font-weight: 800;
 }
