--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -22,6 +22,7 @@
    src: url("../fonts/Montserrat-Black.woff") format("woff"),
       /* Modern Browsers */ url("../fonts/Montserrat-Black.woff2") format("woff2"); /* Modern Browsers */
    font-weight: 900;
+   font-display: swap;
 }
 @font-face {
   font-family: "ProximaNova-Regular";
