added section company

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -259,6 +259,16 @@
    z-index: 3;
    .container {
       position: relative;
+      &::after {
+         content: "";
+         position: absolute;
+         width: 705px;
+         height: 811px;
+         border-top: 12px solid $orange;
+         border-bottom: 12px solid $orange;
+         top: -12px;
+         right: 9px;
+      }
       &.free-quote__inner {
          background-color: transparent;
       }
@@ -577,4 +587,74 @@
    }
 }
 //end bonus
+//start company
+.company {
+   min-height: 900px;
+   padding-top: 80px;
+   .container{
+      position: relative;
+      &::after {
+         content: "";
+         position: absolute;
+         width: 705px;
+         min-height: 924px;
+         border-top: 12px solid $orange;
+         border-bottom: 12px solid $orange;
+         bottom: -55px;
+         left: 0px;
+      }
+   }
+   &__title {
+      text-align: left;
+      color: #fff;
+      text-transform: uppercase;
+      margin-bottom: 55px;
+   }
+   &__head {
+      display: flex;
+      margin-bottom: 48px;
+      img {
+         flex: 0 0 535px;
+         margin-right: 55px;
+         height: 420px;
+      }
+   }
+   &__text {
+      font-size: 16px;
+      color: #fff;
+      line-height: 27px;
+      letter-spacing: -0.7px;
+      p {
+         margin-bottom: 25px;
+      }
+   }
+   &__bottom {
+      display: flex;
+      padding: 20px 30px;
+      border: 1px solid $orange;
+      img {
+         border-radius: 50%;
+         background-size: contain;
+         height: 175px;
+         margin-right: 65px;
+      }
+   }
+   &__bottom-info {
+      padding-top: 25px;
+   }
+   &__bottom-name {
+      font-size: 18px;
+      color: #fff;
+      text-transform: uppercase;
+      @include p900;
+      margin-bottom: 40px;
+   }
+   &__bottom-content {
+      font-size: 16px;
+      color: #fff;
+      letter-spacing: 0.3px;
+   }
+}
+//end company
+
 @import "media";
