--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -3,8 +3,8 @@
 @font-face {
    font-family: "Montserrat-Light";
 
-   src: url("../fonts/Montserrat-Light.woff") format("woff"),
-      /* Modern Browsers */ url("../fonts/Montserrat-Light.woff2") format("woff2"); /* Modern Browsers */
+   src: url("../fonts/Montserrat-Light.woff") format("woff"),      /* Modern Browsers */ 
+   url("../fonts/Montserrat-Light.woff2") format("woff2"); /* Modern Browsers */
    font-weight: 300;
 }
 
@@ -14,6 +14,15 @@
    src: url("../fonts/Montserrat-Regular.woff") format("woff"),
       /* Modern Browsers */ url("../fonts/Montserrat-Regular.woff2") format("woff2"); /* Modern Browsers */
    font-weight: 400;
+}
+
+@font-face {
+  font-family: "Montserrat-Bold";
+
+  src: url("../fonts/Montserrat-Bold.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/Montserrat-Bold.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: 700;
+  font-style: normal;
 }
 
 @font-face {
