--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,8 +7,13 @@ $main: #1c3051;
 }
 
 @mixin m300 {
-   font-family: 'Montserrat-Black', sans-serif;
+   font-family: 'Montserrat-Light', sans-serif;
    font-weight: 300;
+}
+
+@mixin m700 {
+   font-family: 'Montserrat-Bold', sans-serif;
+   font-weight: 700;
 }
 @mixin p900 {
    font-family: 'ProximaNova-Black', sans-serif;
