--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -216,6 +216,7 @@
    &__wrapper {
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
       padding: 105px 45px 85px;
       border: 1px solid $orange;
       position: relative;
@@ -590,16 +591,18 @@
 //start company
 .company {
    min-height: 900px;
-   padding-top: 80px;
-   .container{
+   padding: 75px 0 60px 0;
+   background-repeat: no-repeat;
+   background-size: contain;
+   .container {
       position: relative;
       &::after {
          content: "";
          position: absolute;
          width: 705px;
-         min-height: 924px;
-         border-top: 12px solid $orange;
-         border-bottom: 12px solid $orange;
+         min-height: 934px;
+         border-top: 20px solid $orange;
+         border-bottom: 20px solid $orange;
          bottom: -55px;
          left: 0px;
       }
@@ -608,39 +611,39 @@
       text-align: left;
       color: #fff;
       text-transform: uppercase;
-      margin-bottom: 55px;
+      margin-bottom: 50px;
    }
    &__head {
       display: flex;
-      margin-bottom: 48px;
+      margin-bottom: 40px;
       img {
          flex: 0 0 535px;
-         margin-right: 55px;
+         max-width: 100%;
          height: 420px;
       }
    }
    &__text {
+      flex: 1 1 auto;
       font-size: 16px;
       color: #fff;
       line-height: 27px;
       letter-spacing: -0.7px;
+      padding: 0 10px 0 55px;
       p {
          margin-bottom: 25px;
       }
    }
    &__bottom {
       display: flex;
-      padding: 20px 30px;
+      padding: 20px 30px 40px;
       border: 1px solid $orange;
       img {
          border-radius: 50%;
-         background-size: contain;
          height: 175px;
-         margin-right: 65px;
       }
    }
    &__bottom-info {
-      padding-top: 25px;
+      padding: 25px 0 0 65px;
    }
    &__bottom-name {
       font-size: 18px;
@@ -656,5 +659,84 @@
    }
 }
 //end company
+//start questions
+.questions {
+   padding: 100px 0 70px 0;
+   &__item {
+      margin-bottom: 28px;
+      color: $main;
+   }
+   &__title {
+      text-align: left;
+      margin-bottom: 70px;
+      margin-left: -10px;
+   }
+   &__box-icon {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 1px solid $main;
+      border-radius: 2px;
+      position: relative;
+      margin-right: 40px;
+      cursor: pointer;
+      &.active {
+         .questions__box-line {
+            transform: translate(-50%, -50%) rotate(0deg);
+         }
+      }
+      &.active + .questions__box-content {
+         display: block;
+      }
+      &.active{
+         span{
+            @include m700;
+         }
+      }
+   }
+   &__box-line {
+      width: 9px;
+      height: 1px;
+      background-color: $main;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(0deg);
+      & + .questions__box-line {
+         transform: translate(-50%, -50%) rotate(90deg);
+      }
+   }
+   &__box-info {
+      font-size: 14px;
+      display: inline-block;
+      @include m300;
+      width: 1000px;
+      line-height: 20px;
+      text-transform: uppercase;
+      margin-left: 60px;
+   }
+   &__box-content {
+      display: none;
+      font-size: 14px;
+      @include m300;
+      position: relative;
+      padding: 25px 50px 10px 90px;
+      height: 128px;
+      letter-spacing: -0.7px;
+      line-height: 28px;
+      margin: 20px 0 0 0;
+      &::before {
+         content: "";
+         position: absolute;
+         height: 127px;
+         width: 1px;
+         background-color: #c6cbd3;
+         left: 0;
+         top: 0;
+      }
+   }
+}
+
+//end questions
 
 @import "media";
