--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -16,10 +16,10 @@ body {
   font-family: "ProximaNova-Regular", sans-serif;
   font-weight: 400;
 }
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 10px;  
+  padding: 0 10px;
 }
 
 ul,
@@ -59,7 +59,7 @@ input:focus {
 .footer {
   flex: 0 0 auto;
 }
-.title{
+.title {
   font-size: 33px;
   @include p900;
   color: $main;
@@ -67,3 +67,11 @@ input:focus {
   text-transform: uppercase;
   text-align: center;
 }
+.content-title {
+  font-size: 21px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  line-height: 30px;
+}
+
