--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -11,6 +11,11 @@ $main: #1c3051;
    font-weight: 300;
 }
 
+@mixin m400 {
+   font-family: 'Montserrat-Regular', sans-serif;
+   font-weight: 400;
+}
+
 @mixin m700 {
    font-family: 'Montserrat-Bold', sans-serif;
    font-weight: 700;
