--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -284,12 +284,7 @@
       margin-right: 90px;
    }
    &__content-title {
-      font-size: 21px;
-      color: #fff;
-      font-family: "ProximaNova-Bold", sans-serif;
-      text-transform: uppercase;
-      letter-spacing: -1px;
-      line-height: 30px;
+      @include p800;
       margin-bottom: 65px;
    }
    &__content-text {
@@ -688,8 +683,8 @@
       &.active + .questions__box-content {
          display: block;
       }
-      &.active{
-         span{
+      &.active {
+         span {
             @include m700;
          }
       }
@@ -738,5 +733,85 @@
 }
 
 //end questions
+//start your-question
+.your-question {
+   background-repeat: no-repeat;
+   background-size: cover;
+   min-height: 500px;
+   color: #fff;
+   padding: 70px 0;
 
+   &__wrapper {
+      display: flex;
+      justify-content: space-between;
+   }
+   &__content {
+      flex: 1 1 360px;
+      margin-right: 100px;
+   }
+   &__content-title {
+      @include p900;
+      margin-bottom: 40px;
+   }
+   &__content-text {
+      font-size: 21px;
+      line-height: 30px;
+      text-transform: uppercase;
+   }
+   form {
+      position: relative;
+      width: 700px;
+      font-size: 14px;
+      .form-name {
+         width: 100%;
+      }
+      .form-text {
+         width: 100%;
+         height: 140px;
+         padding-top: 8px;
+         border-radius: 23px;
+         resize: none;
+      }
+      .form-contact {
+         & + .form-contact {
+            margin-left: 15px;
+         }
+      }
+   }
+   input,
+   textarea {
+      background-color: transparent;
+      border: 1px solid rgba(#fff, 0.4);
+      border-radius: 23px;
+      height: 50px;
+      margin-bottom: 20px;
+      width: 340px;
+      color: #fff;
+      padding: 0px 20px;
+      @include m700;
+
+      &::placeholder {
+         color: #fff;
+         line-height: 30px;
+         @include m400;
+      }
+   }
+   button {
+      position: absolute;
+      right: 0;
+      bottom: -45px;
+      cursor: pointer;
+      height: 50px;
+      width: 180px;
+      background-color: #fff;
+      @include m900;
+      text-transform: uppercase;
+      border-radius: 23px;
+      border: none;
+      &:hover {
+         transform: scale(1.1);
+      }
+   }
+}
+//end your-question
 @import "media";
