--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -14,6 +14,7 @@ body {
   position: relative;
   margin: 0;
   font-family: "ProximaNova-Regular", sans-serif;
+  font-size: 14px;
   font-weight: 400;
 }
 .container {
