--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,7 +48,6 @@
          display: inline-block;
          a {
             color: #fff;
-            font-size: 14px;
             font-family: "Montserrat-Regular";
             text-transform: uppercase;
             cursor: pointer;
@@ -122,7 +121,7 @@
       width: 266px;
       height: 66px;
       cursor: pointer;
-      align-items: center;
+      align-items: center;      
       img {
          align-items: center;
          margin-right: 15px;
@@ -197,7 +196,6 @@
       background-color: #fff;
       border-radius: 33px;
       border: transparent;
-      font-size: 14px;
       color: #474747;
       @include m900;
       cursor: pointer;
@@ -245,7 +243,6 @@
       margin-bottom: 20px;
    }
    &__name {
-      font-size: 14px;
       line-height: 28px;
       color: $main;
       text-transform: uppercase;
@@ -331,7 +328,6 @@
          height: 50px;
          margin-bottom: 18px;
          padding: 18px;
-         font-size: 14px;
          color: #fff;
          line-height: 30px;
          &:nth-child(odd) {
@@ -393,14 +389,12 @@
    }
    label {
       display: block;
-      font-size: 14px;
       color: #fff;
       margin-bottom: 15px;
    }
    button {
       background-color: $orange;
       @include m900;
-      font-size: 14px;
       color: #fff;
       text-transform: uppercase;
       align-items: flex-start;
@@ -552,7 +546,6 @@
    }
    &__text-1,
    &__text-2 {
-      font-size: 14px;
       text-transform: uppercase;
       color: $main;
       max-width: 150px;
@@ -702,7 +695,6 @@
       }
    }
    &__box-info {
-      font-size: 14px;
       display: inline-block;
       @include m300;
       width: 1000px;
@@ -712,7 +704,6 @@
    }
    &__box-content {
       display: none;
-      font-size: 14px;
       @include m300;
       position: relative;
       padding: 25px 50px 10px 90px;
@@ -761,7 +752,6 @@
    form {
       position: relative;
       width: 700px;
-      font-size: 14px;
       .form-name {
          width: 100%;
       }
@@ -840,7 +830,7 @@
       height: 105px;
    }
    &__slider-content {
-      padding: 20px;
+      padding: 20px 10px 10px 20px;
    }
    &__slider-title {
       font-size: 15px;
@@ -868,7 +858,7 @@
       @include m300;
       line-height: 28px;
    }
-   &__image{
+   &__image {
       position: absolute;
       bottom: 0;
       left: 255px;
@@ -914,4 +904,34 @@
    }
 }
 //end feedback
+//start map
+.map {
+   iframe {
+      min-height: 700px;
+      width: 100%;
+      border: 0;
+   }
+}
+//end map
+//start footer
+.footer {
+   min-height: 115px;
+   background-color: $main;
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 48px;
+      color: #fff;
+   }
+   &__copy {
+      font-size: 20px;
+      @include p900;
+      text-transform: uppercase;
+      margin-right: 60px;
+   }
+   &__icon {
+      margin-right: auto;
+   }
+}
+//end footer
 @import "media";
